# xl-cli-tools

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
demo/: new.xlsx  old.xlsx  xldiff.tape  xlfilter.tape
docs/superpowers/plans/: 2026-03-17-xldiff.md
docs/superpowers/specs/: 2026-03-13-xlset-design.md  2026-03-17-xldiff-design.md
examples/: create_demo.rs
skills/xlcat/: SKILL.md
skills/xlset/: SKILL.md
src/: diff.rs  filter.rs  formatter.rs  lib.rs  reader.rs
tests/: test_integration.rs  test_xldiff.rs  test_xlfilter.rs
tests/common/: mod.rs
xlcat/src/: formatter.rs  main.rs  reader.rs
xlcat/tests/: test_integration.rs
