[package]
name = "xlcat"
version = "0.2.1"
edition = "2024"
description = "CLI tools for viewing and editing Excel files — designed for LLMs and Claude Code"
license = "MIT"
repository = "https://github.com/LouLouLibs/xl-cli-tools"
keywords = ["excel", "xlsx", "cli", "llm"]
categories = ["command-line-utilities"]
exclude = ["demo/*.gif"]

[lib]
name = "xlcat"
path = "src/lib.rs"

[[bin]]
name = "xlcat"
path = "src/bin/xlcat.rs"

[[bin]]
name = "xlset"
path = "src/bin/xlset.rs"

[[bin]]
name = "xlfilter"
path = "src/bin/xlfilter.rs"

[[bin]]
name = "xldiff"
path = "src/bin/xldiff.rs"

[dependencies]
calamine = "0.26"
polars = { version = "0.46", features = ["dtype-date", "dtype-datetime", "dtype-duration", "csv"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
umya-spreadsheet = "2"
serde_json = { version = "1", features = ["preserve_order"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"

[dev-dependencies]
rust_xlsxwriter = "0.82"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
